# OmniSLM

./: .env.example  .gitignore  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: .gitkeep
apps/api-server/: README.md  pyproject.toml
apps/api-server/src/: main.py
docker/: Dockerfile.api
examples/: agent_example.py  quickstart.py  rag_pipeline.py  workflow_example.py
scripts/: dev-install.bat  dev-install.sh
src/: __init__.py  main.py
src/api/: dependencies.py  middleware.py  schemas.py
src/api/routes/: auth.py  chat.py  health.py  models.py
src/config/: constants.py  logging.py  settings.py
src/core/: __init__.py  exceptions.py  types.py
src/core/events/: __init__.py  bus.py  models.py
src/core/interfaces/: __init__.py  agent.py  embedder.py  memory.py  runtime.py  tool.py
src/core/registry/: __init__.py  runtime_registry.py  tool_registry.py
src/infrastructure/cache/: __init__.py  redis_client.py
src/infrastructure/database/: __init__.py  models.py  session.py
src/infrastructure/embeddings/: __init__.py  sentence_transformer_embedder.py
src/infrastructure/message_queue/: __init__.py  celery_app.py
src/infrastructure/runtimes/: __init__.py  llama_cpp_runtime.py  ollama_runtime.py  ollama_runtime_registry.py  vllm_runtime.py
src/infrastructure/telemetry/: __init__.py  metrics.py  tracing.py
src/infrastructure/vector_store/: __init__.py  qdrant_client.py
src/services/: auth_service.py  chat_service.py
src/services/agents/: __init__.py  react.py
src/services/evaluation/: __init__.py  judge.py  metrics.py
src/services/memory/: __init__.py  managers.py
src/services/rag/: __init__.py  loaders.py  splitters.py
src/services/tools/: __init__.py  plugins.py
src/workers/: __init__.py  ingestion_worker.py
tests/: conftest.py
tests/unit/: test_config.py  test_domain.py
