[project]
name = "omnislm-api-server"
version = "0.1.0"
description = "OmniSLM Reference API Server — built with the OmniSLM framework"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "OmniSLM Team" }]
dependencies = [
    "omnislm[all]>=0.1.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "redis>=5.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "celery>=5.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
